frontend/components/Drawer/Drawer.module.scss
@use "../../app/variables" as *;
@use "sass:map";

.Drawer {
    position: fixed;
    top: 70px;
    background-color: var(--primary-dark);
    min-height: 100vh;
    padding-top: 0px;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    max-width: 1400px;
    z-index: 10;
    box-shadow: var(--main-shadow);
    border-radius: 30px 30px 0 0;
    overflow-y: auto;
    box-sizing: border-box;

    .drawerTop {
        border-radius: 30px 30px 0 0;
        width: 100%;
        display: flex;
        flex-direction: column;
        align-items: center;
        padding: 10px;
        position: fixed;
        z-index: 20;
        box-sizing: border-box;
    }

    .titleContainer {
        display: flex;
        justify-content: center;
        width: 100%;
        position: sticky;
        top: -1px;
        background-color: var(--primary-dark);
        box-sizing: border-box;
        z-index: 19;

        .projectTitle {
            @include project-title-style;
            margin-bottom: 10px;
            transform-origin: top;
        }
    }

    .navIcons {
        display: flex;
        margin: 10px 0px;
        justify-content: space-between;
        width: 90%;
        max-width: 960px;
        box-sizing: border-box;
        cursor: pointer;
        align-items: center;

        .changePageFlex {
            display: flex;
            gap: 30px;
        }

        .navIcon {
            display: flex;
            background-color: var(--btn-bg);
            height: 40px;
            width: 40px;
            justify-content: center;
            align-content: center;
            border-radius: 50%;
            padding: 4px;
            box-sizing: border-box;

            :only-child {
                mix-blend-mode: difference;
                opacity: 0.7;
            }
        }

        .previousIcon {
            @extend .navIcon;
            transform: scale(-1, 1);
        }

        .blankIcon {
            @extend .navIcon;
            opacity: 0;
        }
    }
}


//skeleton: --------------------------

.skeleton {
    width: 100%;
    height: 200px;
    background-color: var(--btn-bg);
    border-radius: 4px;
    animation: skeleton-loading 1.2s infinite linear alternate;
}

@keyframes skeleton-loading {
    0% {
        background-color: var(--btn-bg);
    }

    100% {
        background-color: var(--btn-bg);
        opacity: 0.5;
    }
}

//-------------------------------------

.projectContentContainer {
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 14px;
    margin: 80px 40px;
    padding-bottom: 120px;
    align-items: center;
    overflow-y: auto;
    width: 100%;
    box-sizing: border-box;
    max-height: calc(100vh - 200px);

    .tagsContainer {
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        flex-direction: row;
        gap: 8px;
        margin: -10px auto;
        margin-bottom: 10px;
        width: 100%;
    }

    .tag {
        @include tag;
    }

    .link a,
    .linkBottom a {
        @include paragraph;
        font-weight: 500;
        background-image: var(--green-gradient);
        background-clip: text;
        color: transparent;
        text-decoration: none;
        position: relative;

        // custom link underline
        &::after {
            content: "";
            position: absolute;
            left: 0;
            bottom: -1px;
            width: 100%;
            height: 2px;
            background-image: var(--green-gradient);
        }

        &:hover::after {
            box-shadow: 0px 0px 8px rgba(153, 255, 194, 0.8);
            opacity: 1.2;
            height: 3px;
            bottom: -2px;
        }
    }

    .description {
        @include paragraph;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: left;
        width: 100%;
        max-width: 650px;
        padding: 0px 30px;
        box-sizing: border-box;
        gap: 1.2rem;

        .mainText {
            .paragraph {
                margin: 0px auto;
            }
        }

        .threeDots {
            display: flex;
            flex-direction: row;
            justify-content: center;
            align-items: center;
            gap: 8px;
            margin-bottom: 10px;
            opacity: 0.7;

            .bigDot {
                height: 7px;
                width: 7px;
                border-radius: 20px;
                background-color: var(--white);
            }

            .dot {
                height: 5px;
                width: 5px;
                border-radius: 20px;
                background-color: var(--white);
            }
        }
    }

    .imagesContainer {
        display: flex;
        flex-direction: column;
        gap: 50px;
        margin: 20px auto;
        width: 100%;

        .gifImage {
            animation: fadeIn 0.5s ease-in-out;
            width: 100%;
        }

        .gifBox {
            display: flex;
            justify-content: center;
            align-items: center;
            width: clamp(240px, 75%, 600px);
            box-sizing: border-box;

            &.wide {
                width: 96%;
                margin: 20px auto;
            }
        }

    }

    .videosListContainer {
        width: 100%;
        display: flex;
        flex-direction: column;
    }

    .box {
        display: flex;
        flex-direction: column;
        align-items: left;
        width: 96%;
        margin: 0 auto;
        gap: 0px;
        box-sizing: border-box;
    }

    .projectImage {
        position: relative; 
        width: 100%; 
        height: auto;
    }

    .imageDescription {
        @include description;
        background-color: rgba($color: #ffffff, $alpha: 0.07);
        padding: 14px 10px;
        margin-top: 0;
        width: 100%;
        box-sizing: border-box;
    }

    .videoDescription {
        @include description;
        background-color: rgba($color: #ffffff, $alpha: 0.07);
        padding: 10px 10px;
        margin-top: 0;
        box-sizing: border-box;
    }

    .iframeContainer {
        position: relative;
        width: 100%;
        margin: 0 auto;
        padding-bottom: 56.25%;
        height: 0;
        overflow: hidden;

        iframe {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
        }

        .projectVideo {
            all: unset;
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            border: none;
        }
    }
}

@media (min-width: map.get($breakpoints, large)) {
    .Drawer {
        width: 100%;
        border-radius: 0px 0px 0 0;
        margin: 0 auto;
        left: 50%;
        transform: translateX(-50%);
        box-sizing: border-box;
        padding: 0 20px;
        left: 50% !important;
        transform: translateX(-50%) !important;

        .drawerTop {
            border-radius: 4px 4px 0 0;
            box-sizing: border-box;
            padding: 20px;
        }

        .projectContentContainer {
            width: 100%;
        }

        .projectContentContainer {
            margin: 100px 40px;
            padding: 0px 40px;
        }
    }
}

